--- a/PulsarWorker.Client/PulsarWorker.Client.csproj
+++ b/PulsarWorker.Client/PulsarWorker.Client.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.2-preview.0.4" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
