--- a/PulsarWorker/PulsarWorker.csproj
+++ b/PulsarWorker/PulsarWorker.csproj
@@ -12,9 +12,9 @@
         <PackageReference Include="AutoBogus.Conventions" Version="2.13.1" />
         <PackageReference Include="AutoMapper" Version="12.0.2-preview.0.4" />
         <PackageReference Include="DotPulsar" Version="2.11.1" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.5.23280.8" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-preview.5.23280.8" />
-        <PackageReference Include="Pulsar.Client" Version="2.12.2" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+        <PackageReference Include="Pulsar.Client" Version="2.12.3" />
     </ItemGroup>
 
     <ItemGroup>
