--- a/PulsarWorker.Database/PulsarWorker.Database.csproj
+++ b/PulsarWorker.Database/PulsarWorker.Database.csproj
@@ -16,6 +16,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.9" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     </ItemGroup>
 
