--- a/PulsarWorker.Client/PulsarWorker.Client.csproj
+++ b/PulsarWorker.Client/PulsarWorker.Client.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper" Version="12.0.2-preview.0.4" />
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
