--- a/PulsarWorker/PulsarWorker.csproj
+++ b/PulsarWorker/PulsarWorker.csproj
@@ -10,7 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoBogus.Conventions" Version="2.13.1" />
-        <PackageReference Include="AutoMapper" Version="12.0.2-preview.0.4" />
+        <PackageReference Include="AutoMapper" Version="12.0.1" />
         <PackageReference Include="DotPulsar" Version="2.11.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
