--- a/PulsarWorker.Desktop/PulsarWorker.Desktop.csproj
+++ b/PulsarWorker.Desktop/PulsarWorker.Desktop.csproj
@@ -30,6 +30,7 @@
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+        <PackageReference Include="Semi.Avalonia" Version="11.0.0" />
         <PackageReference Include="System.Reactive" Version="6.0.0" />
     </ItemGroup>
     <ItemGroup>
